--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,49 @@
     ga('create', 'UA-71073175-1', 'auto');
     ga('send', 'pageview');
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Exo:500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 
+  <script>
+    var player, iframe;
+    var $ = document.querySelector.bind(document); 
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
+    setTimeout(function (){
+      player = new YT.Player('player', {
+        height: '0',
+        width: '0',
+        videoId: 'amRFNKKCHgI'
+      });
+      setTimeout(function () {
+        var player = event.target;
+        iframe = $('#player');
+        setupListener();
+      }, 1000);
+    }, 1000);
+
+    // when ready, wait for clicks
+    function onPlayerReadyy(event) {
+      var player = event.target;
+      iframe = $('#player');
+      setupListener(); 
+    }
+
+    function setupListener (){
+      $('youtube-player').addEventListener('click', playFullscreen);
+    }
+
+    function playFullscreen (){
+      player.playVideo();//won't work on mobile
+      
+      var requestFullScreen = iframe.requestFullScreen || iframe.mozRequestFullScreen || iframe.webkitRequestFullScreen;
+      if (requestFullScreen) {
+        requestFullScreen.bind(iframe)();
+      }
+    }
+  </script>
 </body>
 </html>
